<resources>
    <string name="app_name">Raydar</string>
    <string name="title_activity_main">Raydar</string>
    <string name="title_activity_home">Home</string>
    <string name="tab_text_1">Login</string>
    <string name="tab_text_2">Signup</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="str_email">Email</string>
    <string name="str_password">Password</string>
    <string name="str_login">Login</string>
    <string name="str_mobile">Mobile</string>
    <string name="str_first_name">First Name</string>
    <string name="str_last_name">Last Name</string>
    <string name="str_signup">Signup</string>
    <string name="str_user_type">User Type</string>
    <string name="str_edit">Edit</string>
    <string name="str_logout">Logout</string>
    <string name="str_splash">splash</string>

    <string-array name="user_types">
        <item></item>
        <item>Broker</item>
        <item>Agent</item>
        <item>Dealer</item>
        <item>Private</item>
    </string-array>
</resources>
