<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="model"
            type="com.jtanveer.raydar.ui.signup.SignupViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.signup.SignupFragment"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="@dimen/layout_margin"
                android:layout_marginEnd="@dimen/layout_margin">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/str_email"
                    android:inputType="textEmailAddress"
                    android:text="@={model.signup.fields.email}"
                    app:error="@{model.signup.emailError}"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/view_margin"
                app:layout_constraintStart_toStartOf="@id/til_email"
                app:layout_constraintEnd_toEndOf="@id/til_email"
                app:layout_constraintTop_toBottomOf="@id/til_email">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/str_password"
                    android:inputType="textPassword"
                    android:text="@={model.signup.fields.password}"
                    app:error="@{model.signup.passwordError}"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_mobile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/view_margin"
                app:layout_constraintStart_toStartOf="@id/til_email"
                app:layout_constraintEnd_toEndOf="@id/til_email"
                app:layout_constraintTop_toBottomOf="@id/til_password">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/str_mobile"
                    android:inputType="phone"
                    android:text="@={model.signup.fields.mobile}"
                    app:error="@{model.signup.mobileError}"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_first_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/view_margin"
                app:layout_constraintStart_toStartOf="@id/til_email"
                app:layout_constraintEnd_toEndOf="@id/til_email"
                app:layout_constraintTop_toBottomOf="@id/til_mobile">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/str_first_name"
                    android:inputType="textPersonName" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_last_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/view_margin"
                app:layout_constraintStart_toStartOf="@id/til_email"
                app:layout_constraintEnd_toEndOf="@id/til_email"
                app:layout_constraintTop_toBottomOf="@id/til_first_name">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/str_last_name"
                    android:inputType="textPersonName" />

            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/sp_user_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/view_margin"
                app:layout_constraintStart_toStartOf="@id/til_email"
                app:layout_constraintEnd_toEndOf="@id/til_email"
                app:layout_constraintTop_toBottomOf="@id/til_last_name"/>

            <Button
                android:id="@+id/bt_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/view_margin"
                android:layout_marginBottom="@dimen/layout_margin"
                android:text="@string/str_signup"
                android:onClick="@{() -> model.onButtonClick()}"
                app:layout_constraintEnd_toEndOf="@+id/til_password"
                app:layout_constraintTop_toBottomOf="@id/sp_user_type"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>