<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.jtanveer.raydar.viewmodel.HomeViewModel" />
        <variable
            name="user"
            type="com.jtanveer.raydar.database.model.User" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeActivity">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lb_first_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin"
                android:text="@string/str_first_name"
                android:textSize="@dimen/sm_text"
                app:layout_constraintEnd_toEndOf="@id/tv_first_name"
                app:layout_constraintStart_toStartOf="@id/tv_first_name"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_first_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_margin"
                android:layout_marginTop="@dimen/neighbor_margin"
                android:layout_marginEnd="@dimen/layout_margin"
                android:text="@={user.firstName}"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lb_first_name" />

            <TextView
                android:id="@+id/lb_last_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/view_margin"
                android:text="@string/str_last_name"
                android:textSize="@dimen/sm_text"
                app:layout_constraintEnd_toEndOf="@id/tv_last_name"
                app:layout_constraintStart_toStartOf="@id/tv_last_name"
                app:layout_constraintTop_toBottomOf="@id/tv_first_name" />

            <TextView
                android:id="@+id/tv_last_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/neighbor_margin"
                android:text="@={user.lastName}"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                app:layout_constraintEnd_toEndOf="@id/tv_first_name"
                app:layout_constraintStart_toStartOf="@id/tv_first_name"
                app:layout_constraintTop_toBottomOf="@id/lb_last_name" />

            <TextView
                android:id="@+id/lb_mobile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/view_margin"
                android:text="@string/str_mobile"
                android:textSize="@dimen/sm_text"
                app:layout_constraintEnd_toEndOf="@id/tv_mobile"
                app:layout_constraintStart_toStartOf="@id/tv_mobile"
                app:layout_constraintTop_toBottomOf="@id/tv_last_name" />

            <TextView
                android:id="@+id/tv_mobile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/neighbor_margin"
                android:text="@={user.mobile}"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                app:layout_constraintEnd_toStartOf="@id/bt_edit"
                app:layout_constraintStart_toStartOf="@id/tv_first_name"
                app:layout_constraintTop_toBottomOf="@id/lb_mobile" />

            <Button
                android:id="@+id/bt_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/neighbor_margin"
                android:text="@string/str_edit"
                android:onClick="@{() -> model.onEditButtonClick()}"
                app:layout_constraintBaseline_toBaselineOf="@+id/tv_mobile"
                app:layout_constraintEnd_toEndOf="@id/tv_first_name"
                app:layout_constraintStart_toEndOf="@id/tv_mobile" />

            <Button
                android:id="@+id/bt_user_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin"
                android:layout_marginBottom="@dimen/layout_margin"
                android:text="@string/str_user_type"
                android:onClick="@{() -> model.onTypeButtonClick()}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_mobile"
                app:layout_constraintTop_toBottomOf="@id/tv_mobile" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>
</layout>